# MnistBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MnistBenchmark/Include/: NeuralNetwork.h
MnistBenchmark/Source/: Main.cpp
